src/test/ui/nll/relate_tys/var-appears-twice.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/var-appears-twice.rs:33:38
   |
LL |     let x: DoubleCell<_> = make_cell(&b); //~ ERROR
   |                                      ^^ borrowed value does not live long enough
...
LL | }
   | - `b` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
